<resources>
    <string name="app_name">پایه باش</string>
    <string name="app_name_en">PayeBash</string>
    <string name="myAds">myAds</string>
    <string name="login">ارسال کد فعال سازی</string>
    <string name="Mobile">موبایل</string>
    <string name="Code">کد فعالسازی</string>
    <string name="Name">نام</string>
    <string name="Name2">Name</string>
    <string name="FamilyName">نام خانوادگی</string>
    <string name="Family">Family</string>
    <string name="Email">Email</string>
    <string name="Age">سن</string>
    <string name="Age2">Age</string>
    <string name="City">نام شهر</string>
    <string name="go">تایید</string>
    <string name="register">عضویت</string>
    <string name="user_age">سن کاربری : %1$s روز</string>
    <string name="trusted_vote">تعداد رای اعتماد : %1$s رای</string>
    <string name="age">سن : %1$s سال</string>
    <string name="aboutme">درباره :\n %1$s</string>
    <string name="location">محل سکونت : %1$s</string>
    <string name="host">میزبان : %1$s فعالیت</string>
    <string name="takePart">شرکت در : %1$s فعالیت</string>
    <string name="join">یک نفر درخواست اضافه شدن به برنامه %1$s را داد</string>
    <string name="comment">یک نفر در مورد برنامه ی %1$s نظر داد</string>
    <string name="cancel">برنامه "%1$s" لغو گردید</string>
    <string name="searchHint">جستجو در «%1$s»«%2$s»</string>
    <string name="no_connection_title_string">دسترسی به اینترنت یافت نشد !</string>
    <string name="no_connection_desc_string">لطفا دسترسی خود را با اینترنت بررسی نمایید</string>
    <string name="no_connection_retry_string">تلاش مجدد</string>
    <string name="notifSign">پایه های جدید در پایه باش</string>
    <string name="baseUrl">baseUrl</string>
    <string name="topics">/topics/</string>
    <string name="Message">Message</string>
    <string name="Subject">Subject</string>
    <string name="UserId">UserId</string>
    <string name="ComplainantId">ComplainantId</string>
    <string name="AboutMe">AboutMe</string>
    <string name="Favorites">Favorites</string>
    <string name="Telegram">Telegram</string>
    <string name="Instagram">Instagram</string>
    <string name="Soroosh">Soroosh</string>
    <string name="Gmail">Gmail</string>
    <string name="IsShowMobile">IsShowMobile</string>
    <string name="addedFeild">addedFeild</string>
    <string name="Link">Link</string>
    <string name="PhoneNumber">PhoneNumber</string>
    <string name="mobile">Mobile</string>
    <string name="Token">Token</string>
    <string name="SmsCode">SmsCode</string>
    <string name="PostId">PostId</string>
    <string name="Title">Title</string>
    <string name="CreateDate">CreateDate</string>
    <string name="city">City</string>
    <string name="Latitude">Latitude</string>
    <string name="Status">Status</string>
    <string name="GivenName">GivenName</string>
    <string name="familyName">FamilyName</string>
    <string name="FullName">FullName</string>
    <string name="ProfileImage">ProfileImage</string>
    <string name="ServicesIds">ServicesIds</string>
    <string name="IsWoman">IsWoman</string>
    <string name="IsImmediate">IsImmediate</string>
    <string name="Longitude">Longitude</string>
    <string name="Deadline">Deadline</string>
    <string name="CityDate">CityDate</string>
    <string name="Tag">Tag</string>
    <string name="IsCommercial">IsCommercial</string>
    <string name="Cost">Cost</string>
    <string name="Images">Images</string>
    <string name="Aboutme">Aboutme</string>
    <string name="Type">Type</string>
    <string name="IsAuthenticate">IsAuthenticate</string>
    <string name="Comment">Comment</string>
    <string name="UserName">UserName</string>
    <string name="StartDate">StartDate</string>
    <string name="finishDate">finishDate</string>
    <string name="NumberFollowers">NumberFollowers</string>
    <string name="Description">Description</string>
    <string name="SubjectCode">SubjectCode</string>
    <string name="CityCode">CityCode</string>
    <string name="VoteReciverUserId">VoteReciverUserId</string>
    <string name="VoterUserId">VoterUserId</string>
    <string name="FbToken">FbToken</string>
    <string name="Mrchnt">94dcb616-9b48-11e6-b831-000c295eb8fc</string>
    <string name="CategoryId">CategoryId</string>
    <string name="TypeOfPay">TypeOfPay</string>
    <string name="Category">Category</string>
    <string name="Amount">Amount</string>
    <string name="refID">refID</string>
    <string name="payNote">پرداخت جهت %1$s رویداد در اپلیکیشن پایه باش</string>
    <string name="retry">مجدد تلاش کنید /مشکل در ارسال اطلاعات</string>
    <string name="release1">منتشر</string>
    <string name="release2">انتشار</string>
    <string name="pay">پرداخت</string>
    <string name="sure">مطمئن هستید؟</string>
    <string name="next">بعدی</string>
    <string name="skip">قبلی</string>
    <string name="start">ورود</string>
    <string name="image">http://paye.ariaapps.ir/Images/payebash/</string>
    <string name="url">http://paye.ariaapps.ir/</string>
    <string name="url2">paye.ariaapps.ir</string>
    <string name="Notifurl">https://fcm.googleapis.com</string>
    <string name="Notifurl2">https://iid.googleapis.com</string>
    <string name="oauth">https://people.googleapis.com/</string>
    <string name="Authorization">key=</string>
    <string name="auth">Authorization</string>
    <string name="CI">1016650689068-bjoa1k0aa5ve5ht0v4bjtoichajbfutm.apps.googleusercontent.com</string>
    <string name="c">AAAAlX_GT_M:APA91bF7_NvhO3BLFLZ9NWDQ25_atG-ySR98Bh95ZHaM4GJuwYYFp1HK-wTze1U3-An</string>
    <string name="a">v0jTB5czup6MBcC4EYgpNNPX2sTIaTSbgGTKaIQ7zX27ZDMNo3e</string>
    <string name="b">Cgc8LKrP0nFybU12ko2Otf</string>
    <string name="contenttype">content-type</string>
    <string name="applicationjson">application/json</string>
    <string name="Feepayable">Feepayable</string>
    <string name="VersionName">VersionName</string>
    <string name="DownloadUrl">DownloadUrl</string>
    <string name="Skip">Skip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="google_glyph_strings">

        <item>M212.487,269.478l-97.944-97.434
            c-9.876-9.672-13.337-18.021-13.337-29.831c0-22.297,18.021-40.318,40.216-40.318c11.912,0,22.39,5.498,30.331,13.337
            l169.305,167.99V141.703L236.913,37.244C153.834-44.919,0,17.187,0,142.213c0,33.904,11.303,67.807,33.397,89.9l109.908,109.245l0,0
            L212.487,269.478z M212.487,269.478l127.775,126.858l127.876-126.858l70.556,70.556L339.956,537.448l-70.454-70.658L143.254,341.358</item>

        <item>M326.517,269.478l98.045-97.434c9.774-9.672,13.337-18.021,13.337-29.831c0-22.297-18.021-40.318-40.318-40.318
            c-11.81,0-21.89,5.498-29.831,13.337l-26.98,26.777l-71.472-71.37l33.191-33.394c83.079-82.163,236.714-20.057,236.714,104.969
            c0,33.904-11.403,67.807-33.496,89.9L395.749,341.358l0,0L326.517,269.478z M269.502,212.87l-70.76,70.352l-0.407-141.112l0,0
            c23.519,23.315,47.139,46.63,70.556,70.047C269.095,212.361,269.298,212.667,269.502,212.87L269.502,212.87z M326.517,269.478
            L198.742,396.336L70.866,269.478L0.412,340.034l198.331,197.109l70.76-70.352l126.247-125.433</item>
    </string-array>
    <string-array name="line_glyph_strings">
        <item>M269,1.5h270</item>
        <item>M0,1.5h269</item>
    </string-array>
    <string-array name="font_glyph_strings">
        <item>M539,39v70.242c0,2.546-0.858,5.732-1.979,8.379c-2.342,5.193-6.561,8.379-12.365,8.379H484.84h-11.813H460
            V0h25v104h28V39H539z M383.353,103.668c0.102-3.564,0.647-7.461,0.647-11.025V22h-45.492c-10.794,0-20.314,2.684-27.951,10.322
            C303.021,39.959,299,48.143,299,59.039V104 M323,58.428c0-4.073,1.797-7.867,4.75-10.718c3.055-2.953,6.583-4.71,10.758-4.71h21.487
            L360,82.256v21.079V83h-37V58.428z M438,39v70.242c0,2.546-1.071,5.732-2.191,8.379c-2.342,5.193-6.773,8.379-12.578,8.379H384v-22
            h29V39H438z M360,126h24V28h-24V126z M473.333,150.447l12.322,12.322l12.22-12.322l12.322,12.322l12.22-12.322l-12.22-12.322
            l-12.322-12.322l-12.22,12.322L473.333,150.447z M418.344,158.258L418.446,140h-22.098h-0.102h-22.199l0,0l-0.102,19h22.199
            L418.344,158.258z M198,126h10.57h11.711h39.918c5.703,0,9.15-3.186,11.594-8.379c1.12-2.648,1.207-5.833,1.207-8.379V39h-22v65h-31
            V0h-22V126z M247.266,137.653l-12.933-12.933l-12.831,12.933l12.831,12.933L247.266,137.653z M72,39v4.051l0,0V81.34l0,0v24.541
            c0,4.073-2.335,8.212-5.39,11.165C63.555,120,59.183,122,55.008,122h-7.332l0,0h-8.147c-4.175,0-6.816-2-9.871-4.954
            C26.604,114.093,26,109.954,26,105.881V83H0v22.066c0,10.794,3.879,19.925,11.618,27.664C19.255,140.368,28.633,144,39.529,144
            h8.147h7.332c10.794,0,20.163-3.312,27.8-10.949c4.073-4.073,7.026-8.098,8.961-12.986c3.055,3.564,7.23,5.935,12.525,5.935h17.821
            c5.193,0,9.063-2.037,11.405-6.212c3.055,4.175,7.434,6.212,13.442,6.212H179v-22.665l0,0V39h-24v61h-18V39h-26v61H94V41.422V39
            H70.792H72z M99.305,26.147l12.322,12.322l12.322-12.322l12.322,12.322l12.22-12.322l-12.22-12.322L123.948,1.504l-12.322,12.322
            L99.305,26.147z</item>
    </string-array>
    <string name="title_profile">پروفایل</string>
    <string name="title_notify">اعلانیه ها</string>
    <string name="title_event">رویدادها</string>
</resources>