<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layoutDirection="ltr"
    tools:context=".Activities.NoConnectioonActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp60"
            android:layout_height="@dimen/dp60"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            card_view:srcCompat="@drawable/ic_no_connection" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/no_connection_title_string" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginTop="5dp"
            android:text="@string/no_connection_desc_string"
            android:textSize="10dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_default_background"
            android:onClick="no_connection_retry_click"
            android:text="@string/no_connection_retry_string"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>
