<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".activities.SplashActivity">

    <LinearLayout
        android:id="@+id/no_connection_ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_no_connection" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/sp16"
            android:text="@string/no_connection_title_string" />

        <TextView
            android:id="@+id/no_connection_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/no_connection_desc_string"
            android:textSize="12dp" />

        <Button
            android:id="@+id/no_connection_retry"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_solid_blue"
            android:onClick="no_connection_retry_click"
            android:text="@string/no_connection_retry_string"
            android:textSize="@dimen/sp16"
            android:textColor="@color/white" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminateTint="@color/black"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="0dp" />

    <RelativeLayout
        android:id="@+id/animatedSvgView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/linearLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.jaredrummler.android.widget.AnimatedSvgView
                android:id="@+id/animated_svg_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:animatedSvgFillColors="@array/google_glyph_colors"
                app:animatedSvgFillStart="1000"
                app:animatedSvgFillTime="500"
                app:animatedSvgGlyphStrings="@array/google_glyph_strings"
                app:animatedSvgImageSizeX="600"
                app:animatedSvgImageSizeY="600"
                app:animatedSvgTraceTime="1500"
                app:animatedSvgTraceTimePerGlyph="1500" />

            <com.jaredrummler.android.widget.AnimatedSvgView
                android:id="@+id/line_svg_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:animatedSvgFillColors="@array/google_glyph_colors"
                app:animatedSvgFillStart="1000"
                app:animatedSvgFillTime="500"
                app:animatedSvgGlyphStrings="@array/line_glyph_strings"
                app:animatedSvgImageSizeX="600"
                app:animatedSvgImageSizeY="50"
                app:animatedSvgTraceTime="1500"
                app:animatedSvgTraceTimePerGlyph="1500" />

            <com.jaredrummler.android.widget.AnimatedSvgView
                android:id="@+id/font_svg_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:animatedSvgFillColors="@array/google_glyph_colors"
                app:animatedSvgFillStart="1200"
                app:animatedSvgFillTime="1000"
                app:animatedSvgGlyphStrings="@array/font_glyph_strings"
                app:animatedSvgImageSizeX="600"
                app:animatedSvgImageSizeY="300"
                app:animatedSvgTraceTime="2000"
                app:animatedSvgTraceTimePerGlyph="2000" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
